# real-estate

./: .gitignore
app_real_estate/: pyproject.toml
app_real_estate/app_real_estate/: .env  Dockerfile  docker-compose.yaml  main.py  nginx.conf  pyproject.toml  runtime_ 2024-01-09_10-06-11_937594 .json
app_real_estate/app_real_estate/api/: __init__.py
app_real_estate/app_real_estate/auth/: __init__.py
app_real_estate/app_real_estate/backend/: main.py
app_real_estate/app_real_estate/core/: __init__.py  config.py  custom_paginate.py  validators.py
app_real_estate/app_real_estate/crud/: __init__.py  blog.py  category.py  comment.py  feedback_user.py  main_site.py  posts_user.py  profile.py  property.py  rating_user.py  refresh.py  user.py
app_real_estate/app_real_estate/db/: __init__.py  base_class.py  db_helper.py  db_init.py  main_site.json
app_real_estate/app_real_estate/db_mongo/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--1336908322528446834.wt  collection-0--7499228856820258780.wt  collection-2--7499228856820258780.wt  collection-4--7499228856820258780.wt  index-1--1336908322528446834.wt  index-1--7499228856820258780.wt  index-3--7499228856820258780.wt  index-5--7499228856820258780.wt  index-6--7499228856820258780.wt  sizeStorer.wt
app_real_estate/app_real_estate/frontend/: .dockerignore  Dockerfile  index.html  index1.html  p.js  package.json  (+3 more)
app_real_estate/frontend/: index.html
app_real_estate/tests/: conftest.py  factories.py  test_category.py  test_profile.py  test_property.py  test_rating_user.py  test_user.py  utils.py
(+169 files in other folders)
