[tool.poetry]
name = "app-real-estate"
version = "0.1.0"
description = ""
authors = ["tesseract <tesseractmaks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["full"], version = "^0.104.1"}
sqlalchemy = "^2.0.23"
hypercorn = "^0.15.0"
asyncpg = "^0.28.0"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pymongo = "^4.6.0"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
